# SAM

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/samlib/: CMakeLists.txt  ReciterTabs.h  RenderTabs.h  SamTabs.h  debug.c  debug.h  reciter.c  reciter.h  reciter_tabs.h  render.c  render.h  sam.c  sam.h  sam_tabs.h
src/samtalk/: CMakeLists.txt  main.c
src/tests/: CMakeLists.txt
src/tests/assets/: sentences.txt
src/tests/test_common/: CMakeLists.txt
src/tests/test_hello/: CMakeLists.txt  test_hello.c
src/tests/test_phonemes/: CMakeLists.txt  test_phonemes.c
tables/: rules_1.txt  rules_2.txt  tablegen.bat  tablegen.py
